--- a/Milestone2/MainWindow.xaml
+++ b/Milestone2/MainWindow.xaml
@@ -5,17 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Milestone1"
         mc:Ignorable="d"
-        Title="Yelp App" Height="669.68" Width="700">
+        Title="Yelp App" Height="822.665" Width="1054.414">
     <Grid>
-        <Label x:Name="stateLabel" Content="State" HorizontalAlignment="Left" FontSize="14" Margin="90,44,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43"/>
-        <Label x:Name="cityLabel" Content="City" HorizontalAlignment="Left" FontSize="14" Margin="90,97,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336"/>
-        <ComboBox x:Name="stateList" HorizontalAlignment="Left" Margin="199,44,0,0" VerticalAlignment="Top" Width="270" RenderTransformOrigin="0.387,-0.098" SelectionChanged="StateList_SelectionChanged"/>
-        <ComboBox x:Name="cityList" HorizontalAlignment="Left" Margin="199,100,0,0" VerticalAlignment="Top" Width="270" RenderTransformOrigin="-0.28,-0.92" SelectionChanged="CityList_SelectionChanged"/>
-        <DataGrid x:Name="businessGrid" Height="282" Margin="61,289,61.6,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.545" SelectionChanged="BusinessGrid_SelectionChanged"/>
-        <Label x:Name="zipLabel" Content="Zip" HorizontalAlignment="Left" FontSize="14" Margin="90,158,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336"/>
-        <ComboBox x:Name="zipList" HorizontalAlignment="Left" Margin="199,158,0,0" VerticalAlignment="Top" Width="270" RenderTransformOrigin="-0.28,-0.92" SelectionChanged="ZipList_SelectionChanged"/>
-        <Label x:Name="categoriesLabel" Content="Categories" HorizontalAlignment="Left" FontSize="14" Margin="93,217,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336"/>
-        <ComboBox x:Name="categoriesList" HorizontalAlignment="Left" Margin="199,220,0,0" VerticalAlignment="Top" Width="270" RenderTransformOrigin="-0.28,-0.92" SelectionChanged="CategoriesList_SelectionChanged"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="21*"/>
+            <RowDefinition Height="59*"/>
+        </Grid.RowDefinitions>
+        <Label x:Name="stateLabel" Content="State" HorizontalAlignment="Left" FontSize="14" Margin="25,38,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="56"/>
+        <Label x:Name="cityLabel" Content="City" HorizontalAlignment="Left" FontSize="14" Margin="25,70,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="144"/>
+        <ComboBox x:Name="stateList" HorizontalAlignment="Left" Margin="97,42,0,0" VerticalAlignment="Top" Width="72" RenderTransformOrigin="0.387,-0.098" SelectionChanged="StateList_SelectionChanged" Height="23"/>
+        <DataGrid x:Name="businessGrid" Height="441" Margin="221,47,140,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.545" SelectionChanged="BusinessGrid_SelectionChanged" Grid.RowSpan="2"/>
+        <Label x:Name="zipLabel" Content="Zipcode" HorizontalAlignment="Left" FontSize="14" Margin="31,6,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="36" Width="138" Grid.Row="1"/>
+        <Label x:Name="categoriesLabel" Content="Business Categories" HorizontalAlignment="Left" FontSize="14" Margin="32,157,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="137" Grid.Row="1"/>
+        <Label x:Name="selectLocationLabel" Content="Select Location" HorizontalAlignment="Left" FontSize="16" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122"/>
+        <ListBox x:Name="cityList" HorizontalAlignment="Left" Height="100" Margin="32,107,0,0" VerticalAlignment="Top" Width="137" SelectionChanged="CityList_SelectionChanged"/>
+        <ListBox x:Name="zipList" HorizontalAlignment="Left" Height="100" Margin="32,42,0,0" VerticalAlignment="Top" Width="137"  SelectionChanged="ZipList_SelectionChanged" Grid.Row="1"/>
+        <ListBox x:Name="categoriesList" HorizontalAlignment="Left" Height="230" Margin="31,191,0,0" VerticalAlignment="Top" Width="137"   Grid.Row="1" SelectionChanged="CategoriesList_SelectionChanged"/>
+        <Label x:Name="searchResultsLabel" Content="Search Results" HorizontalAlignment="Left" FontSize="16" Margin="221,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122"/>
 
     </Grid>
 </Window>
