--- a/Milestone2/MainWindow.xaml
+++ b/Milestone2/MainWindow.xaml
@@ -25,8 +25,8 @@
         <Label x:Name="searchResultsLabel" Content="Search Results" HorizontalAlignment="Left" FontSize="16" Margin="221,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122"/>
         <Button x:Name="addCategoryButton" Content="Add" HorizontalAlignment="Left" Margin="33,232.2,0,0" Grid.Row="2" VerticalAlignment="Top" Width="58" Height="16" Click="AddCategoryButton_Click"/>
         <Button x:Name="removeCategoryButton" Content="Remove" HorizontalAlignment="Left" Margin="119,232.2,0,0" Grid.Row="2" VerticalAlignment="Top" Width="58" RenderTransformOrigin="0.457,2.21" Height="16" Click="RemoveCategoryButton_Click"/>
-        <Button x:Name="searchBusinessButton" Content="Search Business" HorizontalAlignment="Left" Margin="33,393.977,0,0" Grid.Row="2" VerticalAlignment="Top" Width="144"/>
-        <ListBox x:Name="selectedCategoriesList" HorizontalAlignment="Left" Height="116" Margin="33,263.2,0,0" VerticalAlignment="Top" Width="144"   Grid.Row="2"/>
+        <Button x:Name="searchBusinessButton" Content="Search By Category" HorizontalAlignment="Left" Margin="33,393.977,0,0" Grid.Row="2" VerticalAlignment="Top" Width="144" Click="SearchBusinessButton_Click"/>
+        <ListBox x:Name="selectedCategoriesList" HorizontalAlignment="Left" Height="116" Margin="33,263.2,0,0" VerticalAlignment="Top" Width="144"   Grid.Row="2" SelectionChanged="SelectedCategoriesList_SelectionChanged"/>
 
     </Grid>
 </Window>
