--- a/Milestone2/BusinessDetails.xaml
+++ b/Milestone2/BusinessDetails.xaml
@@ -5,18 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Milestone1"
         mc:Ignorable="d"
-        Title="BusinessDetails" Height="350" Width="550">
+        Title="BusinessDetails" Height="450" Width="550">
     <Grid>
-        <Label x:Name="label" Content="Business Name" HorizontalAlignment="Left" Margin="35,35,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label1" Content="State" HorizontalAlignment="Left" Margin="35,78,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label2" Content="City" HorizontalAlignment="Left" Margin="35,120,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="bname" HorizontalAlignment="Left" Height="23" Margin="215,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="239"/>
-        <TextBox x:Name="state" HorizontalAlignment="Left" Height="23" Margin="215,81,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="239"/>
-        <TextBox x:Name="city" HorizontalAlignment="Left" Height="23" Margin="215,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="239"/>
-        <Label x:Name="label_Copy" Content="Number of businesses in the same city:" HorizontalAlignment="Left" Margin="35,170,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="numInCity" Content="____________" HorizontalAlignment="Left" Margin="336,170,0,0" VerticalAlignment="Top" Width="46"/>
-        <Label x:Name="label_Copy2" Content="Number of businesses in the same state:" HorizontalAlignment="Left" Margin="35,210,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="numInState" Content="____________" HorizontalAlignment="Left" Margin="336,210,0,0" VerticalAlignment="Top" Width="46"/>
+        <Label x:Name="label" Content="Business Name" HorizontalAlignment="Left" Margin="35,19,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1" Content="State" HorizontalAlignment="Left" Margin="35,61,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label2" Content="City" HorizontalAlignment="Left" Margin="35,104,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="bname" HorizontalAlignment="Left" Height="23" Margin="215,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="239"/>
+        <TextBox x:Name="state" HorizontalAlignment="Left" Height="23" Margin="215,61,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="239"/>
+        <TextBox x:Name="city" HorizontalAlignment="Left" Height="23" Margin="215,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="239"/>
+        <Label x:Name="label_Copy" Content="Number of businesses in the same city:" HorizontalAlignment="Left" Margin="35,144,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="numInCity" Content="____________" HorizontalAlignment="Left" Margin="336,144,0,0" VerticalAlignment="Top" Width="46"/>
+        <Label x:Name="label_Copy2" Content="Number of businesses in the same state:" HorizontalAlignment="Left" Margin="35,175,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="numInState" Content="____________" HorizontalAlignment="Left" Margin="336,175,0,0" VerticalAlignment="Top" Width="46"/>
+        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Height="162" Margin="44,235,0,0" VerticalAlignment="Top" Width="465"/>
+        <Label x:Name="label3" Content="Reviews&#xD;&#xA;" HorizontalAlignment="Left" Height="29" Margin="35,206,0,0" VerticalAlignment="Top" Width="95"/>
 
     </Grid>
 </Window>
