Adds datagrid headers for the reviews.

--- a/Milestone2/BusinessDetails.xaml
+++ b/Milestone2/BusinessDetails.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Milestone1"
         mc:Ignorable="d"
-        Title="BusinessDetails" Height="450" Width="550">
+        Title="BusinessDetails" Height="450" Width="912.831">
     <Grid>
         <Label x:Name="label" Content="Business Name" HorizontalAlignment="Left" Margin="35,19,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label1" Content="State" HorizontalAlignment="Left" Margin="35,61,0,0" VerticalAlignment="Top"/>
@@ -17,7 +17,7 @@
         <Label x:Name="numInCity" Content="____________" HorizontalAlignment="Left" Margin="336,144,0,0" VerticalAlignment="Top" Width="46"/>
         <Label x:Name="label_Copy2" Content="Number of businesses in the same state:" HorizontalAlignment="Left" Margin="35,175,0,0" VerticalAlignment="Top"/>
         <Label x:Name="numInState" Content="____________" HorizontalAlignment="Left" Margin="336,175,0,0" VerticalAlignment="Top" Width="46"/>
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Height="162" Margin="44,235,0,0" VerticalAlignment="Top" Width="465"/>
+        <DataGrid x:Name="reviewDataGrid" HorizontalAlignment="Left" Height="162" Margin="44,235,0,0" VerticalAlignment="Top" Width="819"/>
         <Label x:Name="label3" Content="Reviews&#xD;&#xA;" HorizontalAlignment="Left" Height="29" Margin="35,206,0,0" VerticalAlignment="Top" Width="95"/>
 
     </Grid>
