--- a/Milestone3/MainWindow.xaml
+++ b/Milestone3/MainWindow.xaml
@@ -5,28 +5,38 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Milestone1"
         mc:Ignorable="d"
-        Title="Yelp App" Height="822.665" Width="1259.244">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="208*"/>
-            <RowDefinition Height="161*"/>
-            <RowDefinition Height="424*"/>
-        </Grid.RowDefinitions>
-        <Label x:Name="stateLabel" Content="State" HorizontalAlignment="Left" FontSize="14" Margin="32,38,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="56"/>
-        <Label x:Name="cityLabel" Content="City" HorizontalAlignment="Left" FontSize="14" Margin="33,70,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="144"/>
-        <ComboBox x:Name="stateList" HorizontalAlignment="Left" Margin="97,42,0,0" VerticalAlignment="Top" Width="80" RenderTransformOrigin="0.387,-0.098" SelectionChanged="StateList_SelectionChanged" Height="23"/>
-        <DataGrid x:Name="businessGrid" Height="441" Margin="221,47,140,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.545" SelectionChanged="BusinessGrid_SelectionChanged" Grid.RowSpan="3"/>
-        <Label x:Name="zipLabel" Content="Zipcode" HorizontalAlignment="Left" FontSize="14" Margin="31,6,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="36" Width="138" Grid.Row="1"/>
-        <Label x:Name="categoriesLabel" Content="Business Categories" HorizontalAlignment="Left" FontSize="14" Margin="32,157,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="137" Grid.Row="1" Grid.RowSpan="2"/>
-        <Label x:Name="selectLocationLabel" Content="Select Location" HorizontalAlignment="Left" FontSize="16" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122"/>
-        <ListBox x:Name="cityList" HorizontalAlignment="Left" Height="91" Margin="32,107,0,0" VerticalAlignment="Top" Width="146" SelectionChanged="CityList_SelectionChanged"/>
-        <ListBox x:Name="zipList" HorizontalAlignment="Left" Height="110" Margin="32,42,0,0" VerticalAlignment="Top" Width="146"  SelectionChanged="ZipList_SelectionChanged" Grid.Row="1"/>
-        <ListBox x:Name="categoriesList" HorizontalAlignment="Left" Height="195" Margin="31,30.2,0,0" VerticalAlignment="Top" Width="146"   Grid.Row="2" SelectionChanged="CategoriesList_SelectionChanged"/>
-        <Label x:Name="searchResultsLabel" Content="Search Results" HorizontalAlignment="Left" FontSize="16" Margin="221,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122"/>
-        <Button x:Name="addCategoryButton" Content="Add" HorizontalAlignment="Left" Margin="33,232.2,0,0" Grid.Row="2" VerticalAlignment="Top" Width="58" Height="16" Click="AddCategoryButton_Click"/>
-        <Button x:Name="removeCategoryButton" Content="Remove" HorizontalAlignment="Left" Margin="119,232.2,0,0" Grid.Row="2" VerticalAlignment="Top" Width="58" RenderTransformOrigin="0.457,2.21" Height="16" Click="RemoveCategoryButton_Click"/>
-        <Button x:Name="searchBusinessButton" Content="Search By Category" HorizontalAlignment="Left" Margin="33,393.977,0,0" Grid.Row="2" VerticalAlignment="Top" Width="144" Click="SearchBusinessButton_Click"/>
-        <ListBox x:Name="selectedCategoriesList" HorizontalAlignment="Left" Height="116" Margin="33,263.2,0,0" VerticalAlignment="Top" Width="144"   Grid.Row="2" SelectionChanged="SelectedCategoriesList_SelectionChanged"/>
+        Title="Yelp App" Height="893.065" Width="1268.844">
+    <Grid Margin="0,0,3.8,-0.2">
+
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="843" Margin="10,10,0,0" VerticalAlignment="Top" Width="1233">
+            <TabItem Header="Business">
+                <Grid Background="#FFE5E5E5" Margin="0,0,4,4.2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="208*"/>
+                        <RowDefinition Height="161*"/>
+                        <RowDefinition Height="424*"/>
+                    </Grid.RowDefinitions>
+                    <Label x:Name="stateLabel" Content="State" HorizontalAlignment="Left" FontSize="14" Margin="32,38,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="56"/>
+                    <Label x:Name="cityLabel" Content="City" HorizontalAlignment="Left" FontSize="14" Margin="33,70,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="144"/>
+                    <ComboBox x:Name="stateList" HorizontalAlignment="Left" Margin="97,42,0,0" VerticalAlignment="Top" Width="80" RenderTransformOrigin="0.387,-0.098" SelectionChanged="StateList_SelectionChanged" Height="23"/>
+                    <DataGrid x:Name="businessGrid" Height="441" Margin="221,47,140,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.545" SelectionChanged="BusinessGrid_SelectionChanged" Grid.RowSpan="3"/>
+                    <Label x:Name="zipLabel" Content="Zipcode" HorizontalAlignment="Left" FontSize="14" Margin="31,6,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="36" Width="138" Grid.Row="1"/>
+                    <Label x:Name="categoriesLabel" Content="Business Categories" HorizontalAlignment="Left" FontSize="14" Margin="32,157,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="137" Grid.Row="1" Grid.RowSpan="2"/>
+                    <Label x:Name="selectLocationLabel" Content="Select Location" HorizontalAlignment="Left" FontSize="16" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122"/>
+                    <ListBox x:Name="cityList" HorizontalAlignment="Left" Height="91" Margin="32,107,0,0" VerticalAlignment="Top" Width="146" SelectionChanged="CityList_SelectionChanged"/>
+                    <ListBox x:Name="zipList" HorizontalAlignment="Left" Height="110" Margin="32,42,0,0" VerticalAlignment="Top" Width="146"  SelectionChanged="ZipList_SelectionChanged" Grid.Row="1"/>
+                    <ListBox x:Name="categoriesList" HorizontalAlignment="Left" Height="195" Margin="31,30.2,0,0" VerticalAlignment="Top" Width="146"   Grid.Row="2" SelectionChanged="CategoriesList_SelectionChanged"/>
+                    <Label x:Name="searchResultsLabel" Content="Search Results" HorizontalAlignment="Left" FontSize="16" Margin="221,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122"/>
+                    <Button x:Name="addCategoryButton" Content="Add" HorizontalAlignment="Left" Margin="33,232.6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="55" Height="26" Click="AddCategoryButton_Click"/>
+                    <Button x:Name="removeCategoryButton" Content="Remove" HorizontalAlignment="Left" Margin="119,232.6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="58" RenderTransformOrigin="0.457,2.21" Height="26" Click="RemoveCategoryButton_Click"/>
+                    <Button x:Name="searchBusinessButton" Content="Search By Category" HorizontalAlignment="Left" Margin="33,393.6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="144" Click="SearchBusinessButton_Click" Height="31"/>
+                    <ListBox x:Name="selectedCategoriesList" HorizontalAlignment="Left" Height="116" Margin="33,263.2,0,0" VerticalAlignment="Top" Width="144"   Grid.Row="2" SelectionChanged="SelectedCategoriesList_SelectionChanged"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="User">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+        </TabControl>
 
     </Grid>
 </Window>
