--- a/Milestone3/MainWindow.xaml
+++ b/Milestone3/MainWindow.xaml
@@ -9,7 +9,8 @@
     <Grid Margin="0,0,3.8,-0.2">
 
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="843" Margin="10,10,0,0" VerticalAlignment="Top" Width="1233">
-            <TabItem Header="Business">
+            <TabItem Header="Business Search
+                     ">
                 <Grid Background="#FFE5E5E5" Margin="0,0,4,4.2">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="208*"/>
@@ -31,9 +32,12 @@
                     <Button x:Name="removeCategoryButton" Content="Remove" HorizontalAlignment="Left" Margin="119,232.6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="58" RenderTransformOrigin="0.457,2.21" Height="26" Click="RemoveCategoryButton_Click"/>
                     <Button x:Name="searchBusinessButton" Content="Search By Category" HorizontalAlignment="Left" Margin="33,393.6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="144" Click="SearchBusinessButton_Click" Height="31"/>
                     <ListBox x:Name="selectedCategoriesList" HorizontalAlignment="Left" Height="116" Margin="33,263.2,0,0" VerticalAlignment="Top" Width="144"   Grid.Row="2" SelectionChanged="SelectedCategoriesList_SelectionChanged"/>
+                    <ComboBox x:Name="sortResultsByList" HorizontalAlignment="Left" Margin="221,159.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="504" SelectionChanged="SortResultsByList_SelectionChanged"/>
+                    <Label x:Name="sortsResultsByLabel" Content="Sort Results By:" HorizontalAlignment="Left" Margin="221,128.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="122" FontSize="14
+                           "/>
                 </Grid>
             </TabItem>
-            <TabItem Header="User">
+            <TabItem Header="User Information">
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
         </TabControl>
