--- a/Milestone3/MainWindow.xaml
+++ b/Milestone3/MainWindow.xaml
@@ -33,8 +33,7 @@
                     <Button x:Name="searchBusinessButton" Content="Search By Category" HorizontalAlignment="Left" Margin="33,393.6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="144" Click="SearchBusinessButton_Click" Height="31"/>
                     <ListBox x:Name="selectedCategoriesList" HorizontalAlignment="Left" Height="116" Margin="33,263.2,0,0" VerticalAlignment="Top" Width="144"   Grid.Row="2" SelectionChanged="SelectedCategoriesList_SelectionChanged"/>
                     <ComboBox x:Name="sortResultsByList" HorizontalAlignment="Left" Margin="221,159.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="504" SelectionChanged="SortResultsByList_SelectionChanged"/>
-                    <Label x:Name="sortsResultsByLabel" Content="Sort Results By:" HorizontalAlignment="Left" Margin="221,128.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="122" FontSize="14
-                           "/>
+                    <Label x:Name="sortsResultsByLabel" Content="Sort Results By:" HorizontalAlignment="Left" Margin="221,128.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="122" FontSize="14"/>
                 </Grid>
             </TabItem>
             <TabItem Header="User Information">
