--- a/Milestone3/BusinessDetails.xaml
+++ b/Milestone3/BusinessDetails.xaml
@@ -22,10 +22,10 @@
         <Label x:Name="statusLabel" Content="Status" HorizontalAlignment="Left" Margin="44,175,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="status" HorizontalAlignment="Left" Height="23" Margin="215,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="239"/>
         <Button x:Name="addToFavoritesButton" Content="AddToFavorites" HorizontalAlignment="Left" Margin="907,55,0,0" VerticalAlignment="Top" Width="89" Height="62" Click="AddToFavoritesButton_Click"/>
-        <TextBox x:Name="ReviewContentBox" HorizontalAlignment="Left" Height="131" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="876,206,0,0" TextChanged="TextBox_TextChanged"/>
-        <Button x:Name="ReviewSubmit" Content="Submit" HorizontalAlignment="Left" Margin="952,362,0,0" VerticalAlignment="Top" Width="44" Click="Button_Click"/>
+        <TextBox x:Name="ReviewContentBox" HorizontalAlignment="Left" Height="131" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="876,206,0,0"/>
+        <Button x:Name="ReviewSubmit" Content="Submit" HorizontalAlignment="Left" Margin="952,362,0,0" VerticalAlignment="Top" Width="44" Click="ReviewSubmitButton_Click"/>
         <ComboBox x:Name="ReviewScoreList" HorizontalAlignment="Left" Margin="876,360,0,0" VerticalAlignment="Top" Width="41" RenderTransformOrigin="3.726,2.58"/>
-        <Button x:Name="updateCheckInsButton" Content="Check In" HorizontalAlignment="Left" Margin="907,123,0,0" VerticalAlignment="Top" Width="89" Height="62" Click="updateCheckInsButton_Click"/>
+        <Button x:Name="updateCheckInsButton" Content="Check In" HorizontalAlignment="Left" Margin="907,123,0,0" VerticalAlignment="Top" Width="89" Height="62"/>
 
     </Grid>
 </Window>
