--- a/Milestone3/MainWindow.xaml
+++ b/Milestone3/MainWindow.xaml
@@ -65,11 +65,12 @@
                     <TextBlock x:Name="userLatTextBlock" HorizontalAlignment="Left" Margin="32.6,410,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="159" Background="White" Grid.Column="1"/>
                     <TextBlock x:Name="userLongTextBlock" HorizontalAlignment="Left" Margin="32.6,441,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="159" Background="White" Grid.Column="1"/>
                     <Label x:Name="userFavoriteBusinessesLabel" Content="Favorite Businesses" HorizontalAlignment="Left" Margin="10,502,0,0" VerticalAlignment="Top" FontSize="14" Grid.ColumnSpan="2"/>
-                    <DataGrid x:Name="userFavoriteBusinessesDataGrid" HorizontalAlignment="Left" Height="268" Margin="30,537,0,0" VerticalAlignment="Top" Width="600" Grid.ColumnSpan="2"/>
+                    <DataGrid x:Name="userFavoriteBusinessesDataGrid" HorizontalAlignment="Left" Height="245" Margin="30,537,0,0" VerticalAlignment="Top" Width="600" Grid.ColumnSpan="2" SelectionChanged="UserFavoriteBusinessesDataGrid_SelectionChanged"/>
                     <Label x:Name="userFriendsLabel" Content="Friends" HorizontalAlignment="Left" Margin="221.6,9,0,0" VerticalAlignment="Top" FontSize="14" Grid.Column="1"/>
                     <DataGrid x:Name="userFriendsDataGrid" HorizontalAlignment="Left" Height="304" Margin="248,44,0,0" VerticalAlignment="Top" Width="308" Grid.Column="1"/>
                     <Label x:Name="userFriendsReviewLabel" Content="What are my friends reviewing?" HorizontalAlignment="Left" Margin="603.6,9,0,0" VerticalAlignment="Top" FontSize="14" Grid.Column="1"/>
                     <DataGrid x:Name="userFriendsReviewDataGrid" HorizontalAlignment="Left" Height="761" Margin="636.6,44,0,0" VerticalAlignment="Top" Width="489" Grid.Column="1"/>
+                    <Button x:Name="removeSelectedFavoriteButton" Content="Remove Selected Favorite" Grid.Column="1" HorizontalAlignment="Left" Margin="98.6,787,0,0" VerticalAlignment="Top" Width="297" Click="RemoveSelectedFavoriteButton_Click"/>
                 </Grid>
             </TabItem>
         </TabControl>
